<resources>
    <string name="app_name">Bit</string>

    <string name="work_fo_monitoring">FO MONITORING</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="tetap_login">Tetap login</string>
    <string name="mandatory">Mandatory</string>
    <string name="radio_ok">OK</string>
    <string name="radio_nok">NOK</string>
    <string name="radio_na">N/A</string>
    <string name="remark">Remark</string>
    <string name="checkin">Check In</string>

    <string name="dummy_long_text">asdfasd asdfasdf asdfasdf asdfasdasdafsdsdfasdfasdasdfasdfaadsfasdf sdfasdasdafsdsdfasdfasdasdfasdfaadsfasdf sdfasdasdafsdsdfasdfasdasdfasdfaadsfasdf</string>
    <string name="tidak_ada_item">Tidak ada item</string>
    <string name="menunggu_kesiapan_gps">Menunggu kesiapan GPS</string>
    <string name="mohon_aktifkan_automatic_date_time">Mohon aktifkan pengaturan \"Automatic Date and Time\"</string>
</resources>
